Closed Bug 919175 Opened 11 years ago Closed 11 years ago

various optimized-build JIT unused variable warnings

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla27

People

(Reporter: Benjamin, Assigned: Benjamin)

Details

Attachments

(1 file)

/home/benjamin/dev/mozilla/inbound/js/src/jit/CodeGenerator.cpp: In member function ‘virtual bool js::jit::CodeGenerator::visitCallKnown(js::jit::LCallKnown*)’:
/home/benjamin/dev/mozilla/inbound/js/src/jit/CodeGenerator.cpp:1907:17: warning: unused variable ‘target’ [-Wunused-variable]


/home/benjamin/dev/mozilla/inbound/js/src/jit/Lowering.cpp: In member function ‘virtual bool js::jit::LIRGenerator::visitAssertFloat32(js::jit::MAssertFloat32*)’:
/home/benjamin/dev/mozilla/inbound/js/src/jit/Lowering.cpp:515:10: warning: unused variable ‘checkIsFloat32’ [-Wunused-variable]
/home/benjamin/dev/mozilla/inbound/js/src/jit/Lowering.cpp: In member function ‘virtual bool js::jit::LIRGenerator::visitTypeBarrier(js::jit::MTypeBarrier*)’:
/home/benjamin/dev/mozilla/inbound/js/src/jit/Lowering.cpp:1975:13: warning: unused variable ‘outputType’ [-Wunused-variable]
/home/benjamin/dev/mozilla/inbound/js/src/jit/Lowering.cpp: In member function ‘virtual bool js::jit::LIRGenerator::visitStoreTypedArrayElement(js::jit::MStoreTypedArrayElement*)’:
/home/benjamin/dev/mozilla/inbound/js/src/jit/Lowering.cpp:2468:14: warning: unused variable ‘optimizeFloat32’ [-Wunused-variable]
/home/benjamin/dev/mozilla/inbound/js/src/jit/Lowering.cpp: In member function ‘virtual bool js::jit::LIRGenerator::visitStoreTypedArrayElementHole(js::jit::MStoreTypedArrayElementHole*)’:
/home/benjamin/dev/mozilla/inbound/js/src/jit/Lowering.cpp:2497:14: warning: unused variable ‘optimizeFloat32’ [-Wunused-variable]
Attachment #808169 - Flags: review?(jdemooij)
Attachment #808169 - Flags: review?(jdemooij) → review+
https://hg.mozilla.org/mozilla-central/rev/92b58c9e331d
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla27
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: