Bug 919175 - Fix some unused variable warnings on optimized builds in jit/. r=jandem